tests/errors/sem_test_09.py
# sem_tests9.py 
test = [1, 2, 3] + "hey"
print(test)